--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.2",
+    "react-scripts": "4.0.2"
   },
   "scripts": {
     "start": "node index.js & react-scripts start",
