--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
     "axios": "^0.21.1",
+    "bar-chart-simple": "^2.0.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "lowdb": "^1.0.0",
@@ -31,7 +32,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.2"
+    "react-scripts": "4.0.2",
+    "web-vitals": "^1.1.0"
   },
   "scripts": {
     "start": "node index.js & react-scripts start",
