--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "@testing-library/user-event": "^12.7.1",
     "axios": "^0.21.1",
     "bar-chart-simple": "^2.0.2",
-    "bootstrap": "^4.6.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "lowdb": "^1.0.0",
     "nodemon": "^2.0.7",
     "react": "^17.0.1",
-    "react-bootstrap": "^1.5.0",
+    "react-awesome-modal": "^2.0.5",
+    "react-bootstrap4-modal": "^1.7.5",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
