--- a/package.json
+++ b/package.json
@@ -37,13 +37,18 @@
     "start": "node index.js & react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
     ]
+  },
+  "engines": {
+    "node": "14.4.0",
+    "npm": "6.14.8"
   },
   "browserslist": {
     "production": [
